greatly simplify debian/rules (not building all packages yet)

--- a/.gitignore
+++ b/.gitignore
@@ -292,4 +292,30 @@ gen-*
 /tutorial/rb/Makefile
 /tutorial/rb/Makefile.in
 /ylwrap
-
+debian/autoreconf.after
+debian/autoreconf.before
+debian/files
+debian/libthrift-dev.debhelper.log
+debian/libthrift-dev.substvars
+debian/libthrift-dev/
+debian/libthrift-perl.debhelper.log
+debian/libthrift-perl.substvars
+debian/libthrift-perl/
+debian/libthrift2.debhelper.log
+debian/libthrift2.postinst.debhelper
+debian/libthrift2.postrm.debhelper
+debian/libthrift2.substvars
+debian/libthrift2/
+debian/python-thrift-dbg.debhelper.log
+debian/python-thrift-dbg.substvars
+debian/python-thrift-dbg/
+debian/python-thrift.debhelper.log
+debian/python-thrift.substvars
+debian/python-thrift/
+debian/ruby-thrift.debhelper.log
+debian/ruby-thrift.substvars
+debian/ruby-thrift/
+debian/thrift-compiler.debhelper.log
+debian/thrift-compiler.substvars
+debian/thrift-compiler/
+debian/tmp/
